--- a/Star-Pattern/Star-Pattern.html
+++ b/Star-Pattern/Star-Pattern.html
@@ -11,38 +11,65 @@
 <body>
     <script>
 
-        // traiangle
-        for (var i = 5; i >= 1; i--) {
-            for (var j = 1; j <= i; j++) {
-                document.write("*");
-            }
-            document.write("<br>");
-        }
+        // // traiangle
+        // for (var i = 5; i >= 1; i--) {
+        //     for (var j = 1; j <= i; j++) {
+        //         document.write("*");
+        //     }
+        //     document.write("<br>");
+        // }
 
-        var columns = 5;
-        var rows = 5;
+        // var columns = 5;
+        // var rows = 5;
 
-        //  rectangle
-        for (var i = 1; i <= columns; i++) {
-            for (var j = 1; j <= rows; j++) {
-                document.write('*');
-            }
-            document.write('<br>');
+        // //  rectangle
+        // for (var i = 1; i <= columns; i++) {
+        //     for (var j = 1; j <= rows; j++) {
+        //         document.write('*');
+        //     }
+        //     document.write('<br>');
 
-        }
+        // }
 
-        // Hollow rectangle
+        // // Hollow rectangle
+
+        // let n = 5;
+        // let string = "";
+
+        // for (let i = 0; i < n; i++) {
+        //     for (let j = 0; j < n; j++) {
+        //         if (i == 0 || i == n - 1) {
+        //             string += "*";
+        //         }
+        //         else {
+        //             if (j == 0 || j == n - 1) {
+        //                 string += "*";
+        //             }
+        //             else {
+        //                 string += " ";
+        //             }
+        //         }
+        //     }
+        //     string += "\n";
+        // }
+        // console.log(string);
+
+
+        // Hollow treaingle
 
         let n = 5;
         let string = "";
 
-        for (let i = 0; i < n; i++) {
-            for (let j = 0; j < n; j++) {
-                if (i == 0 || i == n - 1) {
+        for (let i = 1; i <= n; i++) {
+            for (let j = 1; j <= n - i; j++) {
+                string += " ";
+            }
+            for (let k = 0; k < 2 * i - 1; k++) {
+                if (i === 1 || i === n) {
                     string += "*";
                 }
                 else {
-                    if (j == 0 || j == n - 1) {
+                    if (k === 0 || k === 2 * i - 2) {
                         string += "*";
                     }
                     else {
@@ -53,7 +80,6 @@
             string += "\n";
         }
         console.log(string);
-
 
 
     </script>
